# TypStyle

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  DocumentStylesheet.iwa  docx_style_parser.cpp  docx_style_parser.h  docx_style_parser_test.cpp  main.cpp  readme.md  sample.xml  smaple.pages
